FIX: Re-aligned all but Card elements on the homepage to better reflect the mock-up // Added a new container around the Menu items

--- a/style/main.scss
+++ b/style/main.scss
@@ -5,10 +5,15 @@
 .main-container {
     max-width: 100%;
     text-decoration: none;
+    margin: 0px;
 }
 
 .header-container {
     @include flexCenter(column);
+
+    &__menu {
+        @include flexCenter(row);
+    }
 }
 
 .body-container {
@@ -19,8 +24,21 @@
 
     &__heading {
         @include header-2;
+        display: flex;
+        flex: auto;
         margin-left: 20px;
     }
+}
+
+.hero-container {
+    width: 100%;
+    height: 277px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    background-color: #F6F6F6;
+    justify-content: space-evenly;
 }
 
 .align-txt {
@@ -61,26 +79,11 @@
     }
 }
 
-
 .header-img {
     width: 162px;
     height: 63px;
     padding: 13px 89px 13px 89px;
     @include flexCenter();
-}
-
-.hero-container {
-    width: 100%;
-    height: 375px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    background-color: #F6F6F6;
-
-    &__menu {
-        @include flexCenter(row);
-    }
 }
 
 .hero-title {
@@ -107,6 +110,7 @@
     background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
     box-shadow: 0px 4px 10px 0px $boxshadowColor;
     color: $bgSection;
+    margin: 20px 0px 20px 0px;
 }
 
 .step-section {
@@ -142,16 +146,32 @@
     &__menu {
         background-color: $bgSection;
     }
+
+    &__p {
+        @include flexStart(column);
+        padding: 0px;
+        margin: 0px;
+    }
 }
 
 .card {
-    @include flexCenter(column);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
     width: 346px;
-    height: 231px;
+    height: 251px;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0px 4px 15px 0px $boxshadowColor;
     position: relative;
+
+    &__container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-left: 10px;
+    }
 
     &__title {
         color: #000;
@@ -171,12 +191,18 @@
         font-style: normal;
         font-weight: 300;
         line-height: normal;
-        width: 94%;
+        padding-bottom: 10px;
+    }
+
+    &__heart {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
     }
 
     & img {
         width: 100%;
-        height: 75%;
+        height: 100%;
     }
 
     & p {
@@ -185,9 +211,20 @@
     }
 
     & h3 {
-        margin-top: 5px;
+        width: 100%;
+        margin-top: 10px;
         margin-bottom: 3px;
     }
+}
+
+.heart__container {
+    display: flex;
+    align-self: flex-end;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    bottom: 25px;
+    right: 20px;
 }
 
 .badge {
@@ -211,7 +248,6 @@
 }
 
 .footer {
-    width: 375px;
     padding: 22px 25px;
     background: $bgColor;
     @include flexCenter(column);
@@ -230,4 +266,9 @@
     &__fa {
         color: white;
     }
+}
+
+* {
+    outline: 1px red solid !important;
+    visibility: visible !important
 }
